syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "empty.proto";

service InfAdminInvitationCodeService {
    rpc Generate (Empty) returns (GenerateResponse) {}
    rpc GetStatus (GetStatusRequest) returns (GetStatusResponse) {}
}

message GenerateResponse {
    string invitationCode = 1;
}

message GetStatusRequest {
    string invitationCode = 1;
}

message GetStatusResponse {
    enum InvitationCodeStatus {
        DOES_NOT_EXIST = 0;
        PENDING_USE = 1;
        USED = 2;
        EXPIRED = 3;
    }

    InvitationCodeStatus status = 1;
}
